--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,30 +5,16 @@
   height: 5vh;
   font-size: large;
   padding: 10px;
-  .navbar {
-    padding: 10px;
-    .nav-item {
-      .router:hover {
-        color: #0dcaf0;
-      }
-      .router {
-        color: #0dcaf0;
-      }
-      .danger:hover {
-        color: red;
-        padding-right: 10px;
-      }
-      .danger {
-        color: red;
-        padding-right: 10px;
-      }
-    }
-  }
 }
 .p-sidebar-content {
   padding: 0;
-}
-.p-button {
-  font-size: large;
-  width: 32vw;
+  display: flex;
+  a {
+    .p-button {
+      align-items: start;
+      justify-content: start;
+      font-size: large;
+      width: 19vw;
+    }
+  }
 }
