feat(Company): list stylized

--- a/src/styles/company/list.scss
+++ b/src/styles/company/list.scss
@@ -6,6 +6,28 @@
     width: 98vw;
     .p-datatable-wrapper {
       height: 66vh;
+      border-radius: 8px;
+      .p-datatable-tbody {
+        tr {
+          background: #2b5a63 !important;
+          border-color: black;
+          border-radius: 8px;
+          td {
+            border: 1px solid #304562;
+          }
+        }
+      }
+      .p-datatable-thead tr > {
+        th {
+          border: 1px solid #304562;
+          background: #2b5a63 !important;
+        }
+      }
+    }
+    .p-paginator {
+      border-radius: 8px;
+      border: 1px solid #304562;
+      background: #2b5a63 !important;
     }
   }
 }
