--- a/src/styles/userForms.scss
+++ b/src/styles/userForms.scss
@@ -12,7 +12,7 @@
     align-items: center;
     padding: 15px;
     width: 30vw;
-    height: 50vh;
+    min-height: 50vh;
     background: #ffff;
     border-radius: 10px;
     .btn-info {
