styling: style improved

--- a/src/pages/company/styles/list.scss
+++ b/src/pages/company/styles/list.scss
@@ -9,7 +9,7 @@
       border-radius: 8px;
       .p-datatable-tbody {
         tr {
-          background: #2b5a63 !important;
+          background: #212a3e !important;
           border-color: black;
           border-radius: 8px;
           td {
@@ -20,14 +20,14 @@
       .p-datatable-thead tr > {
         th {
           border: 1px solid #304562;
-          background: #2b5a63 !important;
+          background: #212a3e !important;
         }
       }
     }
     .p-paginator {
       border-radius: 8px;
       border: 1px solid #304562;
-      background: #2b5a63 !important;
+      background: #212a3e !important;
     }
   }
 }
