--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,11 +5,11 @@
   height: 5vh;
   font-size: large;
   padding: 10px;
-  background: #2b5a63;
+  background: #212a3e;
 }
 .p-sidebar-mask {
   .p-sidebar {
-    background: #2b5a63;
+    background: #212a3e;
     .p-sidebar-content {
       padding: 0;
       display: flex;
