--- a/src/pages/company/styles/company.scss
+++ b/src/pages/company/styles/company.scss
@@ -1,7 +1,7 @@
 .body {
   width: 100vw;
   height: 95vh;
-  background: #3d6870;
+  background: #9ba4b5;
   display: flex;
   flex-direction: column;
   gap: 25px;
