--- a/src/styles/modalForm.scss
+++ b/src/styles/modalForm.scss
@@ -2,11 +2,11 @@
   .p-dialog {
     .p-dialog-header {
       color: white;
-      background: #2b5a63;
+      background: #9ba4b5;
     }
     .p-dialog-content {
       color: white;
-      background: #2b5a63;
+      background: #9ba4b5;
       .teste {
         display: flex;
         width: 75vw;
