feat: change className

--- a/src/styles/modalForm.scss
+++ b/src/styles/modalForm.scss
@@ -7,7 +7,7 @@
     .p-dialog-content {
       color: white;
       background: #9ba4b5;
-      .teste {
+      .forms {
         display: flex;
         width: 75vw;
         height: 50vh;
