--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,6 @@
 .menu {
   display: flex;
-  justify-content: left;
+  justify-content: space-between;
   width: 100vw;
   height: 5vh;
   font-size: large;
